# taodb

./: .gitignore  .mcp.example.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  PRE_LAUNCH_REPORT.md  README.md  SECURITY.md  TEST_REPORT.md  TEST_REPORT_V2.md  USAGE.md  docker-compose.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: index.html  why-not-vector-db.md
docs/en/: api-reference.md  concepts.md  deploy.md  faq.md  getting-started.md  http-api.md  index.md  usage.md
docs/marketing/: demo-script.md  demo_agent.py  record-demo.sh  render-demo.py  show-hn.md
docs/zh/: api-reference.md  concepts.md  deploy.md  faq.md  getting-started.md  http-api.md  index.md  usage.md
scripts/: embed.py  gen-social-preview.py
src/: crc.rs  lib.rs  main.rs  mcp.rs  model.rs  recall.rs  store.rs
src/api/: mod.rs
src/tenant/: mod.rs
tests/: deep_edge_cases.rs  e2e.rs  v2_three_layer.rs  v5_four_layer.rs
web-ide/: ide.py
