[package]
name = "taodb"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
description = "Memory for AI Creators — persistent temporal-spatial memory engine for LLM agents, MCP + HTTP dual protocols"
license = "MIT"
repository = "https://github.com/taodbhip/taodb"
authors = ["taodb contributors"]
keywords = ["llm", "memory", "mcp", "temporal", "spatial", "agent"]
categories = ["development-tools", "web-programming::http-server"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
rand = "0.9"
anyhow = "1"
parking_lot = "0.12"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
clap = { version = "4", features = ["derive"] }
crc32fast = "1.5.0"
redb = "4.1.0"
rmcp = { version = "1.7.0", default-features = false, features = ["server", "macros", "transport-io"] }

[dev-dependencies]
tempdir = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
